--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core dependencies
 netifaces==0.11.0
-flask==3.0.0
-gunicorn==21.2.0
-Werkzeug==3.0.1
+flask==3.1.1
+gunicorn==23.0.0
+Werkzeug>=3.1.0
 
 # Security dependencies
 flask-wtf==1.2.1
